--- a/Adventure.Physics.Swap.Settings.ReloadedII/Adventure.Physics.Swap.Settings.ReloadedII.csproj
+++ b/Adventure.Physics.Swap.Settings.ReloadedII/Adventure.Physics.Swap.Settings.ReloadedII.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>NET472</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
