--- a/Adventure.Physics.Swap.Settings.ReloadedII/Adventure.Physics.Swap.Settings.ReloadedII.csproj
+++ b/Adventure.Physics.Swap.Settings.ReloadedII/Adventure.Physics.Swap.Settings.ReloadedII.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="1.1.0" />
     <PackageReference Include="ParallelExtensionsExtras" Version="1.2.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
     <PackageReference Include="Reloaded.WPF.Theme.Default" Version="1.0.1" />
