--- a/Adventure.Physics.Swap.ReloadedII/ModConfig.json
+++ b/Adventure.Physics.Swap.ReloadedII/ModConfig.json
@@ -3,7 +3,7 @@
   "ModName": "Sonic Adventure 1/2/Heroes Physics Swap",
   "ModAuthor": "Sewer56",
   "ModVersion": "1.1.0",
-  "ModDescription": "Simple mod for Sonic Heroes that allows for swapping character physics.",
+  "ModDescription": "Physics Editor for SADX/SA2B/Sonic Heroes that lets you edit and/or swap character physics.",
   "ModDll": "Adventure.Physics.Swap.ReloadedII.dll",
   "ModR2RManagedDll32": "x86/Adventure.Physics.Swap.ReloadedII.dll",
   "ModR2RManagedDll64": "x64/Adventure.Physics.Swap.ReloadedII.dll",
