--- a/Adventure.Physics.Swap.ReloadedII/Adventure.Physics.Swap.ReloadedII.csproj
+++ b/Adventure.Physics.Swap.ReloadedII/Adventure.Physics.Swap.ReloadedII.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <OutputPath>../Output/</OutputPath>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Reloaded.Mod.Interfaces" Version="1.6.0" />
+    <PackageReference Include="Reloaded.Mod.Interfaces" Version="1.9.0" />
   </ItemGroup>
 
   <ItemGroup>
