Changed: Build mod as Release without R2R

--- a/Adventure.Physics.Swap.ReloadedII/ModConfig.json
+++ b/Adventure.Physics.Swap.ReloadedII/ModConfig.json
@@ -2,11 +2,11 @@
   "ModId": "sonicadventureengine.physicsswap",
   "ModName": "Sonic Adventure 1/2/Heroes Physics Swap",
   "ModAuthor": "Sewer56",
-  "ModVersion": "1.2.1",
+  "ModVersion": "1.2.2",
   "ModDescription": "Physics Editor for SADX/SA2B/Sonic Heroes that lets you edit and/or swap character physics.",
   "ModDll": "Adventure.Physics.Swap.ReloadedII.dll",
-  "ModR2RManagedDll32": "x86/Adventure.Physics.Swap.ReloadedII.dll",
-  "ModR2RManagedDll64": "x64/Adventure.Physics.Swap.ReloadedII.dll",
+  "ModR2RManagedDll32": "",
+  "ModR2RManagedDll64": "",
   "ModIcon": "Preview.png",
   "ModDependencies": [],
   "SupportedAppId": [ "tsonic_win.exe", "sonic2app.exe", "sonic.exe" ]
