--- a/Adventure.Physics.Swap.ReloadedII/ModConfig.json
+++ b/Adventure.Physics.Swap.ReloadedII/ModConfig.json
@@ -5,9 +5,31 @@
   "ModVersion": "1.2.2",
   "ModDescription": "Physics Editor for SADX/SA2B/Sonic Heroes that lets you edit and/or swap character physics.",
   "ModDll": "Adventure.Physics.Swap.ReloadedII.dll",
+  "ModIcon": "Preview.png",
   "ModR2RManagedDll32": "",
   "ModR2RManagedDll64": "",
-  "ModIcon": "Preview.png",
+  "ModNativeDll32": "",
+  "ModNativeDll64": "",
+  "IsLibrary": false,
+  "ReleaseMetadataFileName": "Sewer56.Update.ReleaseMetadata.json",
+  "PluginData": {
+    "GitHubRelease": {
+      "UserName": "Sewer56",
+      "RepositoryName": "Adventure.Physics.Swap.ReloadedII",
+      "UseReleaseTag": true,
+      "AssetFileName": "Mod.zip"
+    },
+    "NuGet": {
+      "AllowUpdateFromAnyRepository": false,
+      "DefaultRepositoryUrls": [
+        "http://packages.sewer56.moe:5000/v3/index.json"
+      ]
+    }
+  },
+  "IsUniversalMod": false,
   "ModDependencies": [],
-  "SupportedAppId": [ "tsonic_win.exe", "sonic2app.exe", "sonic.exe" ]
+  "OptionalDependencies": [],
+  "SupportedAppId": [
+    "tsonic_win.exe"
+  ]
 }
