--- a/Adventure.Physics.Swap.ReloadedII/Adventure.Physics.Swap.ReloadedII.csproj
+++ b/Adventure.Physics.Swap.ReloadedII/Adventure.Physics.Swap.ReloadedII.csproj
@@ -4,12 +4,26 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <OutputPath>../Output/</OutputPath>
-    <ApplicationIcon />
-    <OutputType>WinExe</OutputType>
-    <StartupObject />
+    <OutputPath>$(RELOADEDIIMODS)/sonicadventureengine.physicsswap</OutputPath>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+
+    <!-- IL Trimming Support for Framework Dependent Apps. Unofficial.
+         If you set this to true, trimming will be enabled when you publish the mod.
+         Test trimming with: `BuildLinked.ps1` in PowerShell. -->
+    <ReloadedILLink>true</ReloadedILLink>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ReloadedLinkRoots Include="Adventure.Physics.Swap.ReloadedII" />
+    <ReloadedLinkRoots Include="Config" />
+    <!-- Add assemblies to be trimmed. You might need to add their dependencies too!  -->
+    <ReloadedLinkAssemblies Include="Reloaded.Memory" />
+  </ItemGroup>
+  
+  <Import Project="Reloaded.Trimming.targets" />
+  
   <ItemGroup>
     <None Remove="ModConfig.json" />
     <None Remove="Preview.png" />
@@ -25,11 +39,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Reloaded.Mod.Interfaces" Version="1.9.0" />
+    <PackageReference Include="Reloaded.Mod.Interfaces" Version="2.3.0" ExcludeAssets="runtime" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Adventure.Physics.Swap.Shared\Adventure.Physics.Swap.Shared.csproj" />
+    <ProjectReference Include="..\Adventure.Physics.Swap.Settings.ReloadedII\Adventure.Physics.Swap.Settings.ReloadedII.csproj" IncludeAssets="All" />
   </ItemGroup>
 
+  <!-- Not included via ProjectReference, so we need to manually add it -->
+  <ItemGroup>
+    <Reference Include="Xceed.Wpf.Toolkit">
+      <HintPath>../Adventure.Physics.Swap.Settings.ReloadedII/Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  
 </Project>
