--- a/Adventure.Physics.Swap.Shared/Adventure.Physics.Swap.Shared.csproj
+++ b/Adventure.Physics.Swap.Shared/Adventure.Physics.Swap.Shared.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <LangVersion>10.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,11 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
-    <PackageReference Include="Reloaded.Memory" Version="4.1.1" />
-    <PackageReference Include="Reloaded.WPF" Version="1.0.0" />
+    <PackageReference Include="Ninject" Version="3.3.6" />
+    <PackageReference Include="PropertyChanged.Fody" Version="4.0.4" PrivateAssets="All" />
+    <PackageReference Include="Reloaded.Memory" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
